--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Fit Bitch (Basic)</string>
+    <string name="app_name">Fit Bitch</string>
     <string name="calories_title">Calories</string>
     <string name="carbs">Carbs</string>
     <string name="fats">Fats</string>
